fixed some spacing issues 	modified:   client/src/components/student/QuizReview.js 	modified:   client/src/components/student/QuizTaker.js 	modified:   client/src/styles/Student.css

--- a/client/src/styles/Student.css
+++ b/client/src/styles/Student.css
@@ -99,7 +99,7 @@ button::-moz-focus-inner {
 }
 
 .wadayano-list{
-    float:right;
+    float:left;
 }
 
 
